# pi-bno055-python

./: CMakeLists.txt  README.md  bno055_binding.cpp  bno055_wrapper.cpp  bno055_wrapper.hpp  getbno055.h  main.py
